plugins {
    id 'java'
    id 'checkstyle'
    id 'pmd'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes 'Main-Class': 'Main'
    }
    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
}

pmd {
    consoleOutput = true
    ignoreFailures = true
}


dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

test {
    useJUnit()
    ignoreFailures = true
}

checkstyle {
    toolVersion = "8.32"
    ignoreFailures = true
}

pmd {
    ignoreFailures = true
    toolVersion = '6.24.0'
}